     stk_factorialdesign object.

   o stk_distrib_normal_ei, stk_distrib_student_ei: bugfix (the
     optional input argument "minimize" was not taken into account).

   o stk_distrib_normal_cdf.m: Fix the zero-variance case.


Changes in version 2.2.1
========================

* Octave 4.0 compliance

   o Fix unit tests   


Changes in version 2.2.0
========================

* Octave package

   o The STK is now available both as an "all-purpose" Matlab/Octave toolbox (as
     usual) and as a full-fledged Octave package that can be installed using
     `pkg install`.

* Core

   o stk_model now also accepts function handles for covariance_type.

   o stk_ortho_func is deprecated and will be completeky replaced, in the 3.x
     series, by linear model objects. In the meantime, stk_ortho_func has been
     kept as a gateway to stk_lm_* functions and now supports the case of cubic
     polynomial models.

   o stk_cholcov: new function that adaptively adds a little bit of noise on the
     diagonal of a covariance matrix to help chol succeed, when the first
     factorization returned by chol is not complete (a warning is emitted when
     doing so). Used in stk_param_init, @stk_kreq_qr/get, stk_param_relik...

   o @stk_kreq_qr: heuristic improvement of numerical conditioning (implemented
     in the new private function compute_P_scaling).

* Covariance functions

   o Accept invRho = 0 in anisotropic covariance functions.

   o stk_sf_matern: Handle special cases (3/2, 5/2, Inf) explicitely, and handle
     large values of the smoothness parameter nu better.

   o Handle the case of Gaussian isotropic and anisotropic covariance functions
     in stk_param_init and stk_param_getdefaultbounds.

* Linear models

   o Introduce linear models objects. Currently, the following linear model
     object classes are available: stk_lm_null, stk_lm_constant, stk_lm_affine,
     stk_lm_quadratic, stk_lm_cubic and stk_lm_matrix.
